--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,24 @@ code {
 .ant-layout-sider-zero-width-trigger {
   top: 10px !important;
 }
+
+.garage-wrapper {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  place-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 800px;
+  margin: 0px auto;
+}
+
+.garage-items {
+  background: rgb(255, 255, 255);
+  width: 90px;
+  height: 90px;
+  margin: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
