--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,36 @@ code {
   top: 10px !important;
 }
 
+.ant-input-affix-wrapper .ant-input:not(:first-child) {
+  padding-left: 35px;
+}
+
+.custom-input {
+  width: 100%;
+    height: 30px;
+    padding: 0 11px;
+    text-align: left;
+    background-color: #fbf5f500;
+    border: 1px solid #d9d9d9;
+    border-radius: 4px;
+    outline: 0;
+    -webkit-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+}
+
+.custom-input:hover {
+  border-color: #40a9ff;
+  border-right-width: 1px !important;
+}
+
+.custom-input:focus {
+  border-color: #40a9ff;
+  border-right-width: 1px !important;
+  outline: 0;
+  -webkit-box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2);
+  box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2);
+}
+
 .garage-wrapper {
   display: flex;
   width: 100%;
@@ -58,10 +88,13 @@ code {
   color: white;
 }
 
-.card-filter {
+.card-white, .card-filter {
   display: flex;
   background: white;
   width: 100%;
   padding: 20px;
+}
+
+.card-filter {
   margin-bottom: 30px
 }
